second attempt to fix grid size on mobile

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,17 @@ main div div {
 
 @media only screen and (max-width: 400) {
     main > div {
+        flex: 1 1 auto;
+        width: 320px;
         max-width: 320px;
         height: 15px
+    }
+    main {
+        height: 90dvh;
+        max-width: 94vw;
+    }
+    body {
+        height: 90dvh;
+        max-width: 100vw;
     }
 }
